css/light-style.css
.page{
    background-image: url("../images/bg-mobile-light.jpg");
    background-color: hsl(236, 33%, 92%);
}
.page__input{
    opacity: .8;
    color: hsl(234, 11%, 52%);
    background-color: white;
    opacity: 1;
}
.page__input::placeholder{
    opacity: .6;
}
.page__input-container{
    background-color: white;
}
.todo_list{
    background-color: hsl(0, 0%, 98%);
}
.todo_list__incompleted{
    opacity: .6;
}
.todo_list__cls-completed{
    opacity: .6;
}
.todo_list__delete{
    opacity: 0;
}
.todo_list__delete:hover{
    opacity: .6;
}
.checkbox{
    border: 1px solid hsl(240, 4%, 87%);
}
.todo_list__check{
    border: 1px solid hsl(240, 4%, 87%);
}
.todo_list__button{
    opacity: .5;
}
.todo_list__status--mobile{
    background-color: hsl(0, 0%, 98%);
}
.todo_list__button--active{
    color: hsl(220, 98%, 61%);
    opacity: 1;
}

@media only screen and (min-width: 376px) and (max-width: 429px){
    .page{
        background-image: url("../images/bg-mobile-light.jpg");
        background-size: 100%;
    }
}
@media only screen and (min-width: 430px) and (max-width:1440px){
    .page{
        background-image: url("../images/bg-desktop-light.jpg");
    }
}
@media only screen and (min-width:1441px){
    .page{
        background-image: url("../images/bg-desktop-light.jpg");
        background-size: 100%;
    }
}

